snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.module.sha256
a151152dcefce2905f8b7b38ee54606efec20fb4dc118d04f434e86315c554e0